tests/fail/data_race/local_variable_alloc_race.stderr
error: Undefined Behavior: Data race detected between (1) creating a new allocation on thread `main` and (2) non-atomic write on thread `unnamed-ID` at ALLOC. (2) just happened here
  --> tests/fail/data_race/local_variable_alloc_race.rs:LL:CC
   |
LL |             *ptr = 127;
   |             ^^^^^^^^^^ Data race detected between (1) creating a new allocation on thread `main` and (2) non-atomic write on thread `unnamed-ID` at ALLOC. (2) just happened here
   |
help: and (1) occurred earlier here
  --> tests/fail/data_race/local_variable_alloc_race.rs:LL:CC
   |
LL |             StorageLive(val);
   |             ^^^^^^^^^^^^^^^^
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: BACKTRACE (of the first span) on thread `unnamed-ID`:
   = note: inside closure at tests/fail/data_race/local_variable_alloc_race.rs:LL:CC
   = note: thread `unnamed-ID` was spawned by thread `main`
   = note: inside `std::sys::pal::PLATFORM::thread::Thread::new` at RUSTLIB/std/src/sys/pal/PLATFORM/thread.rs:LL:CC
   = note: inside `std::thread::Builder::spawn_unchecked_::<'_, {closure@tests/fail/data_race/local_variable_alloc_race.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::Builder::spawn_unchecked::<{closure@tests/fail/data_race/local_variable_alloc_race.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::Builder::spawn::<{closure@tests/fail/data_race/local_variable_alloc_race.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::spawn::<{closure@tests/fail/data_race/local_variable_alloc_race.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
note: inside `spawn_thread`
  --> tests/fail/data_race/local_variable_alloc_race.rs:LL:CC
   |
LL | /     std::thread::spawn(|| {
LL | |         while P.load(Relaxed).is_null() {
LL | |             std::hint::spin_loop();
LL | |         }
...  |
LL | |         }
LL | |     })
   | |______^
note: inside `main`
  --> tests/fail/data_race/local_variable_alloc_race.rs:LL:CC
   |
LL |             Call(t = spawn_thread(), ReturnTo(after_spawn), UnwindContinue())
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to 1 previous error

